--- a/front-end/src/layout/employeepage.css
+++ b/front-end/src/layout/employeepage.css
@@ -11,6 +11,11 @@
     padding: 40px;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+
 .btn-wrap {
     width: 20%;
     font-family: "Montserrat", sans-serif;
@@ -32,7 +37,7 @@
 .link-wrapper {
     display: flex;
     gap: 20px;
-    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .link-wrapper a {
@@ -51,7 +56,6 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    min-width: 50%;
 }
 
 
